--- a/index.html
+++ b/index.html
@@ -1,106 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gemini Code Reviewer</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI-BITBOY-DEX :: STRATEGIC SYNTHESIS CORE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['"Roboto Mono"', 'monospace'],
-              mono: ['"SF Mono"', 'Consolas', '"Roboto Mono"', '"Courier New"', 'monospace'],
-            },
-            colors: {
-              'terminal-green': '#39ff14',
-              'terminal-bg': '#080c10',
-              'accent': {
-                DEFAULT: '#39ff14',
-                300: '#39ff14',
-                400: '#39ff14',
-                500: '#39ff14',
-              }
-            },
-            boxShadow: {
-                'glow-green': '0 0 5px #39ff14, 0 0 10px #39ff14',
-            },
-            animation: {
-              'fade-in-up': 'fadeInUp 0.5s ease-out forwards',
-            },
-            keyframes: {
-              fadeInUp: {
-                '0%': { opacity: '0', transform: 'translateY(20px)' },
-                '100%': { opacity: '1', transform: 'translateY(0)' },
-              },
-            },
-          },
-        },
-      }
-    </script>
-    <style>
-      @keyframes blink-caret {
-        from, to { opacity: 1; }
-        50% { opacity: 0; }
-      }
-      .blinking-cursor::after {
-        content: '_';
-        animation: blink-caret 1s step-end infinite;
-        font-weight: bold;
-        margin-left: 6px;
-        color: #39ff14;
-      }
-      @keyframes indeterminate-progress {
-        0% { transform: translateX(-100%) scaleX(0.5); }
-        100% { transform: translateX(100%) scaleX(0.5); }
-      }
-      .progress-bar {
-        width: 100%;
-        animation: indeterminate-progress 2s ease-in-out infinite;
-      }
-      body::after {
-        content: " ";
-        display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background: repeating-linear-gradient(
-          0deg,
-          rgba(0, 24, 0, 0.15),
-          rgba(0, 24, 0, 0.15) 1px,
-          transparent 1px,
-          transparent 3px
-        );
-        pointer-events: none;
-        z-index: 9999;
-      }
-      .prose-code {
-        text-shadow: 0 0 2px currentColor;
-      }
-    </style>
-  <script type="importmap">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="index.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@3.6.0/cdn.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/3.0.1/chartjs-plugin-annotation.min.js"></script>
+    <script src="https://unpkg.com/@web3modal/standalone@3.1.0/dist/index.umd.js"></script>
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.21.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.417.0",
-    "marked": "https://aistudiocdn.com/marked@^13.0.2",
-    "react-syntax-highlighter": "https://aistudiocdn.com/react-syntax-highlighter@^15.5.0",
-    "react-syntax-highlighter/": "https://aistudiocdn.com/react-syntax-highlighter@^15.5.0/"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0"
   }
 }
 </script>
 </head>
-  <body class="bg-terminal-bg text-gray-300 font-mono">
-    <div id="root"></div>
-  </body>
+<body>
+    <div class="container">
+        <header class="header">
+            <span>AI-BITBOY-DEX :: STRATEGIC SYNTHESIS CORE</span>
+            <div class="header-controls">
+                <div class="status-indicator">
+                    <div id="status-light" class="status-light"></div>
+                    <span id="ai-status-text">SYSTEM ONLINE</span>
+                </div>
+            </div>
+        </header>
+
+        <main class="main-content">
+            <!-- Top Row: Chart and Intel -->
+            <div id="market-chart-panel" class="panel">
+                <div class="panel-header">
+                    <h2 class="panel-title"><i class="fas fa-chart-bar"></i>MARKET ANALYSIS :: BTC/USD</h2>
+                    <div class="chart-controls">
+                         <div class="chart-toolbar">
+                             <button id="draw-trendline-btn" class="chart-tool-btn" aria-label="Draw Trendline" title="Draw Trendline"><i class="fas fa-pencil-ruler"></i></button>
+                             <button id="add-annotation-btn" class="chart-tool-btn" aria-label="Add Annotation" title="Add Annotation"><i class="fas fa-map-marker-alt"></i></button>
+                             <button id="clear-drawings-btn" class="chart-tool-btn" aria-label="Clear Drawings" title="Clear Drawings"><i class="fas fa-trash"></i></button>
+                        </div>
+                        <div class="timeframe-selector">
+                            <button class="timeframe-btn active" data-timeframe="1H">1H</button>
+                            <button class="timeframe-btn" data-timeframe="4H">4H</button>
+                            <button class="timeframe-btn" data-timeframe="1D">1D</button>
+                            <button id="reset-zoom-btn" class="timeframe-btn" aria-label="Reset Zoom" title="Reset Zoom"><i class="fas fa-search-minus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div id="chart-container">
+                    <canvas id="marketChart"></canvas>
+                </div>
+            </div>
+            <div id="market-intel" class="panel">
+                <h2 class="panel-title"><i class="fas fa-satellite-dish"></i>MARKET INTEL</h2>
+                <div id="order-book-container">
+                    <!-- Order book will be injected here -->
+                </div>
+                <div class="intel-grid">
+                     <div class="data-point">
+                        <h3>24H Volume</h3>
+                        <p>$45.2B</p>
+                    </div>
+                     <div class="data-point">
+                        <h3>Dominance</h3>
+                        <p>BTC 51.7%</p>
+                    </div>
+                     <div class="data-point">
+                        <h3>Volatility</h3>
+                        <p class="negative">HIGH</p>
+                    </div>
+                     <div class="data-point">
+                        <h3>Sentiment</h3>
+                        <p class="positive">GREED</p>
+                    </div>
+                </div>
+                <h3 class="news-title">LATEST INTEL FEED</h3>
+                <div id="news-feed" class="news-feed">
+                    <!-- News items will be injected here -->
+                </div>
+            </div>
+
+            <!-- Bottom Row: Controls, Directives, Logs, History -->
+            <div id="ai-synthesis" class="panel">
+                <h2 class="panel-title"><i class="fas fa-brain"></i>AI PERSONA &amp; CAPITAL</h2>
+                <div id="persona-selector" class="persona-selector">
+                    <!-- Personas will be injected here -->
+                </div>
+                <div class="ai-provider-container">
+                    <h3 class="form-label">AI PROVIDER</h3>
+                    <div id="provider-selector" class="provider-selector">
+                        <!-- AI Providers will be injected here -->
+                    </div>
+                    <div id="local-model-container" class="provider-input-group" style="display: none;">
+                        <label for="local-model-input">OLLAMA MODEL</label>
+                        <div class="input-with-button">
+                            <input type="text" id="local-model-input" class="override-input" placeholder="e.g., llama3">
+                            <button id="test-ollama-btn">Test</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="allocation-container">
+                    <label for="allocation-slider" class="form-label">ALLOCATION: <span id="allocation-value">50%</span></label>
+                    <input type="range" id="allocation-slider" min="0" max="100" value="50" class="form-range">
+                </div>
+                <div id="manual-overrides-container" class="manual-overrides-container">
+                    <h3 class="form-label">MANUAL OVERRIDES</h3>
+                    <div class="override-input-group">
+                        <label for="manual-tp-input">TAKE PROFIT</label>
+                        <input type="number" id="manual-tp-input" class="override-input" placeholder="e.g., 70000">
+                    </div>
+                    <div class="override-input-group">
+                        <label for="manual-sl-input">STOP LOSS</label>
+                        <input type="number" id="manual-sl-input" class="override-input" placeholder="e.g., 65000">
+                    </div>
+                </div>
+            </div>
+            <div id="directive-panel" class="panel">
+                <h2 class="panel-title"><i class="fas fa-file-alt"></i>TRADE DIRECTIVE</h2>
+                <div id="directive-output">
+                    <span class="placeholder">Select a persona and generate a directive...</span>
+                </div>
+                <div class="btn-group">
+                    <button id="generate-directive-btn" class="btn btn-buy">GENERATE DIRECTIVE</button>
+                </div>
+            </div>
+            <div id="ai-operations" class="panel">
+                <h2 class="panel-title"><i class="fas fa-cogs"></i>AI OPERATIONS LOG</h2>
+                <div id="ai-operations-container">
+                    <div id="ai-log" class="ai-log">
+                        <!-- Log entries will be injected here -->
+                    </div>
+                </div>
+            </div>
+            <div id="trade-history-panel" class="panel">
+                 <h2 class="panel-title"><i class="fas fa-history"></i>TRADE HISTORY</h2>
+                 <div id="trade-history" class="trade-history">
+                    <!-- Trade history will be injected here -->
+                 </div>
+            </div>
+        </main>
+    </div>
+    <div id="notification-container"></div>
+    <script type="module" src="index.tsx"></script>
+</body>
 </html>
+
